# airflow-data-platform

./: .gitignore  .platform-custom-images  .pre-commit-config.yaml  .security-exceptions.yml  BAT_REPORT_SERVICE_SELECTION.md  BAT_SUMMARY_SERVICE_SELECTION.md  BAT_TASK24_RESULTS.md  CLAUDE.md  COMPREHENSIVE_E2E_TEST.py  CRITICAL_ISSUES_FOUND.md  DEEP_TESTING.py  DOCKER-TEST-MATRIX.txt  DOCKER-VERIFICATION-REPORT.md  DOCKER-VERIFICATION-SUMMARY.md  EXECUTIVE_SUMMARY_BAT.md  EXECUTIVE_SUMMARY_TASK24.md  FINAL_INTEGRATION_REPORT.md  FINAL_PEXPECT_VALIDATION.py  FINAL_STATUS.md  FINAL_STATUS_BEFORE_SLEEP.md  FIX_SUMMARY.md  GOOD_MORNING_STATUS.md  MORNING_SUMMARY.md  OVERNIGHT_FIXES.md  PERSISTENT_TEST_PLAN.md  PROMPT_INTERPOLATION_FIX_REPORT.md  PROPOSED_RESTRUCTURE.md  QUICK_SMOKE_TEST.sh  README-LAYER2-DATA-PROCESSING.md  README-LAYER3-WAREHOUSES.md  README-OLD.md  README-PLATFORM-SETUP.md  README.md  README_CURRENT_STATE.md  README_TASK24_BAT.md  README_WIZARD_STATUS.md  RECOMMENDED_IMPROVEMENTS.md  SBOM.md  SECURITY.md  STATUS_FOR_STANDUP.md  (+58 more)
.claude/: LESSONS_LEARNED_PLATFORM_FOUNDATION.md  LESSONS_LEARNED_REPOSITORY_SEPARATION.md
.claude/commands/: housekeeping.md
.github/: dependabot.yml
.github/workflows/: build-sqlmodel-runner.yml  codeql.yml  test-kerberos-diagnostics.yml
ansible/: 01-prerequisites.yml  03-validation.yml  README.md  pipx-requirements.txt  requirements.txt  requirements.yml  setup-wsl2.yml  site-new.yml  site.yml  teardown.yml  validate-all.yml  validate-deployed-components.yml  validate-windows.yml
ansible/components/: 01-mkcert-binary-tasks.yml  02-windows-ca-trust-tasks.yml  03-certificate-file-management-tasks.yml  04-traefik-platform-deployment-tasks.yml  05-docker-registry-deployment-tasks.yml  06-airflow-platform-deployment-tasks.yml
ansible/group_vars/: all.yml
ansible/inventory/: local-dev.ini
data-workspace/: pyproject.toml
data-workspace/data-platform-framework/: pyproject.toml
data-workspace/data-platform-framework/src/data_platform_framework/utils/: deployment.py
data-workspace/data-platform-framework/tests/unit/: test_imports_structure.py  test_table_mixins.py  test_trigger_builder.py
deprecated/: README.md
docs/: CLAUDE.md  DIRECTORY-STRUCTURE-GAPS.md  README.md  SECURITY-RISK-ACCEPTANCE.md  SECURITY.md  TECHNICAL-ARCHITECTURE.md  UX_DESIGN_PRINCIPLES.md  WHY-THIS-ARCHITECTURE.md  building-images-corporate.md  corporate-image-requirements.md  corporate-image-specification.md  corporate-setup-guide.md  custom-image-requirements.md  detailed-features.md  directory-structure.md  getting-started-simple.md  getting-started.md  git-cleanup-audit.md  kerberos-diagnostic-guide.md  kerberos-progressive-validation.md  kerberos-setup-wsl2.md  kerberos-wizard-experience.md  openmetadata-decisions-summary.md  openmetadata-developer-journey.md  openmetadata-implementation-spec.md  openmetadata-integration-design.md  platform-architecture-vision.md  technical-reference.md  test-container-image-resolution.md  test-results-custom-images.md
kerberos/: .env.example  Makefile  README.md  REAL-KERBEROS-TESTING.md  SIDECAR-ARCHITECTURE-COMPARISON.md  TDD-REFACTOR-PLAN.md  docker-compose.yml  setup.sh
kerberos-astronomer/: Dockerfile.astronomer-kerberos  Dockerfile.kerberos-sidecar  IMPLEMENTATION_SUMMARY.md  README.md
layer1-platform/: README.md  packages.txt
layer2-datakits-framework/: README.md
layer2-datakits/sqlserver-runner/: pyproject.toml
layer2-datakits/sqlserver-runner/datakit_sqlserver/: bronze.py
openmetadata/: .env.example  CLAUDE.md  Makefile  README.md  docker-compose.yml  setup.sh  test-opensearch.sh
orchestration-workspace/: pyproject.toml
pagila/: Makefile  README.md
platform-bootstrap/: .env.example  ARCHITECTURE-KERBEROS-MODES.md  CLAUDE.md  ENV-ADDITIONS.md  KERBEROS-QUICK-START.md  KERBEROS-SETUP-WIZARD.md  Makefile  README.md  check-sql-spn.sh  clean-slate.sh  developer-kerberos-simple.yml  developer-kerberos-standalone.yml  diagnose-kerberos.sh  diagnostic-context.md  docker-compose.mock-services.yml  docker-compose.openmetadata.yml  docker-compose.yml  generate-diagnostic-context.sh  krb5-auth-test.sh  krb5-auth-test.sh.original  local-registry-cache.yml  setup-kerberos.sh  test-kerberos.sh  test-sql-direct.sh  test-sql-prebuilt.sh  test-sql-simple.sh  test_kerberos.py  test_kerberos_simple.py
platform-infrastructure/: .env.example  MAKEFILE-TARGETS-PLAN.md  MIGRATION-PLAN.md  Makefile  README-GAPS.md  README.md  docker-compose.yml
prerequisites/: README.md
runtime-environments/: README.md
runtime-environments/postgres-runner/: pyproject.toml
runtime-environments/spark-runner/: pyproject.toml
scripts/: build-all.sh  build-layer2-components.sh  build-platform-images.sh  deploy-layer2-runtime.sh  diagnose-windows-user-context.ps1  install-pipx-deps.sh  load-sample-data.sh  regenerate-certificates-windows.ps1  regenerate-certificates.sh  run-data-pipeline.sh  run-tests.sh  scan-supply-chain.sh  setup-certificates-windows-auto.ps1  setup-certificates-windows.bat  setup-certificates-windows.ps1  setup-layer2.sh  setup-windows-prereqs.sh  setup.sh  teardown-layer2.sh  teardown-windows.bat  teardown-windows.ps1  teardown.sh  test-airflow-certificates.sh  test-browser-access.sh  test-certificate-trust.sh  test-layer2-components.sh  test-with-postgres-sandbox.sh  validate-data-quality.sh  validate-platform-complete.sh  verify-certificate-chain.sh  verify.sh  win-prereqs.ps1
sqlmodel-framework/: API_REFERENCE.md  GETTING_STARTED.md  README.md  pyproject.toml
sqlmodel-framework/examples/kerberos_bronze/: README.md  extract_with_kerberos.py  pyproject.toml
sqlmodel-framework/examples/simple_postgres_bronze/: README.md  extract.py  models.py  pyproject.toml
test-airflow-certs/: Dockerfile
tests/: README.md  test-all-custom-images.sh  test-clean-slate-images.sh  test-custom-image-validation.sh  test-platform-integration.sh  test_engine.py  test_kerberos_enhancements.py  test_loader.py  test_runner.py  test_schema.py
traefik/: setup-dev-certs-hybrid.ps1
wizard/: README.md
(+455 files in other folders)
