[tool.ruff]
line-length = 100
target-version = "py311"  # Match common WSL2 Ubuntu Python version

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["datakit_bronze", "datakit_postgres", "datakit_sqlserver", "datakit_spark"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Project metadata (for future Python packaging if needed)
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workstation-setup"
version = "1.0.0"
description = "Comprehensive workstation setup for Astronomer Airflow data engineering platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Data Engineering Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
