[tool.uv.workspace]
members = [
    "../layer3-warehouses"
]

[project]
name = "orchestration-workspace"
version = "0.1.0"
description = "Airflow orchestration workspace - DAGs and pipeline configuration"
requires-python = ">=3.12.11"
dependencies = [
    "apache-airflow>=2.7.0",
    "apache-airflow-providers-docker>=3.10.0",
    "apache-airflow-providers-postgres>=5.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "D"
]
ignore = [
    "E501", "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D301", "D415"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
