[project]
name = "datakit-sqlserver"
version = "0.1.0"
description = "SQL Server datakit (bronze ingestion)"
requires-python = "==3.12.11"
dependencies = [
  "data-platform-framework",
  "typer==0.15.1",
  "pyodbc==5.2.0",
  "pandas==2.2.3"
]
[project.scripts]
datakit-sqlsrv = "datakit_sqlserver.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
data-platform-framework = { path = "../../data-workspace/data-platform-framework", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["datakit_sqlserver"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend = "../../data-workspace/pyproject.toml"
