[project]
name = "datakit-postgres"
version = "0.1.0"
description = "Postgres datakit (bronze ingestion)"
requires-python = "==3.12.11"
dependencies = [
  "data-platform-framework",
  "typer==0.15.1",
  "psycopg[binary]==3.2.4",
  "pandas==2.2.3"
]
[project.scripts]
datakit-pg = "datakit_postgres.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
data-platform-framework = { path = "../../data-workspace/data-platform-framework", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["datakit_postgres"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend = "../../data-workspace/pyproject.toml"
