[project]
name = "datakit-spark"
version = "0.1.0"
description = "Spark datakit (bronze ingestion)"
requires-python = "==3.12.11"
dependencies = [
  "data-platform-framework",
  "typer==0.15.1",
  "pyspark==3.5.3"
]
[project.scripts]
datakit-spark = "datakit_spark.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
data-platform-framework = { path = "../../data-workspace/data-platform-framework", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["datakit_spark"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend = "../../data-workspace/pyproject.toml"
